[package]
name = "loader"
version = "0.1.0"
authors = ["Kehe Ye <1131531950@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
asm_const = []

[dependencies]
axstd = { path = "../../ulib/axstd", optional = true }
axconfig = { path = "../../modules/axconfig" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
